export class IInputAdapter {
  attach(k, actions) {
    throw new Error("Not implemented");
  }
}
