
export class IScoreService {
  async getTop10() { throw new Error("Not implemented"); }
  async saveScore(name, score, character) { throw new Error("Not implemented"); }
}
